# transcriberapp

./: .coverage  .dockerignore  .gitignore  .travis.yml  Dockerfile  Dockerfile.base  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_clean.txt  requirements_none.txt  setup.py  start.sh  test_main.py
.github/workflows/: ci.yml
doc/: ANTES_DESPUES_STATIC.md  ARQUITECTURA.md  CHECKLIST_MIGRACION.md  CHECKLIST_REORGANIZACION.md  DOCUMENTACION_INDICE.md  ESTRUCTURA_STATIC.md  LECTURA_RAPIDA.txt  MODULOS_GUIA.md  REFACTORIZACION_COMPLETA.md  REFACTORIZACION_MAIN_JS.md  REFACTORIZACION_MODOS_PROCESADOS.md  REFACTORIZATION.md  REFERENCIA_PROCESSEDMODES.md  RESUMEN_EJECUTIVO.md  RESUMEN_ESTRUCTURA.txt  VERIFICACION_REFACTORACION.md
transcriber_app/: config.py  main.py
transcriber_app/modules/: audio_downloader.py  audio_receiver.py  email_sender.py  emails.py  gemini_client.py  output_formatter.py  prompt_factory.py  summarizer.py  transcriber.py  transcriber_cli.py
transcriber_app/runner/: orchestrator.py
transcriber_app/tests/: audio_reciver-test.py  emailer-test.py  gemini_client-test.py  output_formatter-test.py  summarizer-test.py  test_agents_load.py  test_ai_manager.py  test_audio_downloader_pytest.py  test_audio_receiver_pytest.py  test_background_integration.py  test_chat_stream_endpoint.py  test_email_sender_pytest.py  test_gemini_client.py  test_gemini_client_pytest.py  test_gemini_model.py  test_logging_config_pytest.py  test_main_cli.py  test_orchestrator.py  test_orchestrator_pytest.py  test_output_formatter_pytest.py  (+6 more)
(+46 files in other folders)
